tests/typescript/pos/simple/top-00.ts
/*@ foo :: () => top */

function foo ():number {
  
  return 1;
}

