tests/typescript/neg/simple/this-00.ts


/*@ foo :: () => void */
function foo ():void {


}
